--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,22 @@ jobs:
       - run:
           name: Running tests
           command: npm run test
+
+  snyk:
+    docker:
+      - image: 'circleci/node:latest'
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - npm-deps-{{ checksum "package.json" }}
+            - npm-deps-
+      - run:
+          name: Install snyk globally
+          command: sudo npm install -g snyk
+      - run:
+          name: Test using snyk
+          command: snyk test
   
   greenkeeper:
     docker:
@@ -94,7 +110,9 @@ workflows:
           requires:
             - lint
             - test
+            - snyk
       - semantic-release:
           requires:
             - lint
             - test
+            - snyk
