ci(circleci): add snyk test to workflow
forgot to do this

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,6 +106,9 @@ workflows:
       - test:
           requires:
             - prep
+      - snyk:
+          requires:
+            - prep
       - greenkeeper:
           requires:
             - lint
