--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
   "scripts": {
     "test": "mocha",
     "lint": "eslint src",
-	"snyk": "snyk test",
+    "snyk": "snyk test",
     "semantic-release": "semantic-release"
   },
   "dependencies": {
     "bufferutil": "^4.0.0",
-    "snyk": "^1.95.0",
     "utf-8-validate": "^5.0.1",
     "ws": "^6.0.0"
   },
@@ -39,7 +38,8 @@
     "istanbul": "^1.0.0-alpha",
     "mocha": "^5.0.0",
     "rimraf": "^2.6.2",
-    "semantic-release": "^15.9.12"
+    "semantic-release": "^15.9.12",
+    "snyk": "^1.95.0"
   },
   "config": {
     "commitizen": {
