--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,12 @@ jobs:
       - run:
           name: Install FOSSA client
           command: curl -H 'Cache-Control:no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | bash
-      - run:
-          name: Install greenkeeper-lockfile globally
-          command: sudo npm install -g greenkeeper-lockfile
-      - run:
-          name: Update lockfile
-          command: greenkeeper-lockfile-update
+#      - run:
+#          name: Install greenkeeper-lockfile globally
+#          command: sudo npm install -g greenkeeper-lockfile
+#      - run:
+#          name: Update lockfile
+#          command: greenkeeper-lockfile-update
       - run:
           name: Install packages
           command: npm install
@@ -71,21 +71,21 @@ jobs:
           name: Test using snyk
           command: npm run snyk
   
-  greenkeeper:
-    docker:
-      - image: 'circleci/node:latest'
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - npm-deps-{{ checksum "package.json" }}
-            - npm-deps-
-      - run:
-          name: Install greenkeeper-lockfile globally
-          command: sudo npm install -g greenkeeper-lockfile
-      - run:
-          name: Upload lockfile
-          command: greenkeeper-lockfile-upload
+#  greenkeeper:
+#    docker:
+#      - image: 'circleci/node:latest'
+#    steps:
+#      - checkout
+#      - restore_cache:
+#          keys:
+#            - npm-deps-{{ checksum "package.json" }}
+#            - npm-deps-
+#      - run:
+#          name: Install greenkeeper-lockfile globally
+#          command: sudo npm install -g greenkeeper-lockfile
+#      - run:
+#          name: Upload lockfile
+#          command: greenkeeper-lockfile-upload
   
   semantic-release:
     docker:
@@ -114,11 +114,11 @@ workflows:
       - snyk:
           requires:
             - prep
-      - greenkeeper:
-          requires:
-            - lint
-            - test
-            - snyk
+#      - greenkeeper:
+#          requires:
+#            - lint
+#            - test
+#            - snyk
       - semantic-release:
           requires:
             - lint
